--- a/TaskManager/src/app/dashboard/dashboard.component.html
+++ b/TaskManager/src/app/dashboard/dashboard.component.html
@@ -82,9 +82,7 @@
       </div>
       <div class="col-12">
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">ABC Infotech Ltd.</li>
-          <li class="list-group-item">DEF Software Solutions</li>
-          <li class="list-group-item">GHI Industries</li>
+          <li class="list-group-item" *ngFor="let client of Clients">{{client}}</li>
         </ul>
       </div>
     </div>
@@ -104,10 +102,7 @@
                 Project A
               </button>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Project A</a>
-                <a class="dropdown-item" href="#">Project B</a>
-                <a class="dropdown-item" href="#">Project C</a>
-                <a class="dropdown-item" href="#">Project D</a>
+                <a class="dropdown-item" href="#" *ngFor="let project of Projects">{{project}}</a>
               </div>
             </div>
           </div>
@@ -122,10 +117,7 @@
                 2019
               </button>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">2019</a>
-                <a class="dropdown-item" href="#">2018</a>
-                <a class="dropdown-item" href="#">2017</a>
-                <a class="dropdown-item" href="#">2016</a>
+                <a class="dropdown-item" href="#" *ngFor="let year of Years">{{year}}</a>
               </div>
             </div>
           </div>
@@ -166,34 +158,14 @@
             <th>Team Members Count</th>
             <th>Temporarily Unavailable Members</th>
           </tr>
-          <tr>
+          <tr *ngFor="let teamMembersSummary of TeamMembersSummary">
             <td>
-              <b>East</b>
+              <b>{{teamMembersSummary.Region}}</b>
             </td>
-            <td>20</td>
-            <td>4</td>
+            <td>{{teamMembersSummary.TeamMembersCount}}</td>
+            <td>{{teamMembersSummary.TemporarilyUnavailableMembers}}</td>
           </tr>
-          <tr>
-            <td>
-              <b>South</b>
-            </td>
-            <td>15</td>
-            <td>8</td>
-          </tr>
-          <tr>
-            <td>
-              <b>West</b>
-            </td>
-            <td>17</td>
-            <td>1</td>
-          </tr>
-          <tr>
-            <td>
-              <b>North</b>
-            </td>
-            <td>15</td>
-            <td>6</td>
-          </tr>
+
         </table>
       </div>
     </div>
@@ -209,20 +181,20 @@
       <div class="col-lg-12 pt-2">
         <div class="accordion" id="accordion1">
           <!-- east starts -->
-          <div class="card">
+          <div class="card" *ngFor="let teamMembersGrp of TeamMembers;let i=index">
             <div class="card-header bg-secondary" id="card1">
               <h2 class="mb-0">
                 <button
                   class="btn btn-link text-white"
                   type="button"
                   data-toggle="collapse"
-                  data-target="#cardbody1"
+                  [attr.data-target]="'#cardbody' + i"
                 >
-                  East
+                  {{teamMembersGrp.Region}}
                 </button>
               </h2>
             </div>
-            <div id="cardbody1" class="collapse show" data-parent="#accordion1">
+            <div [id]="'cardbody' + i" class="collapse" data-parent="#accordion1">
               <div class="card-body">
                 <table class="table">
                   <thead>
@@ -233,26 +205,12 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>
-                      <td>1</td>
-                      <td>Ford</td>
-                      <td><i class="fa fa-phone"></i> Available</td>
+                    <tr *ngFor="let member of teamMembersGrp.Members">
+                      <td>{{member.ID}}</td>
+                      <td>{{member.Name}}</td>
+                      <td><i class="fa fa-phone"></i>{{member.Status}}</td>
                     </tr>
-                    <tr>
-                      <td>2</td>
-                      <td>Miller</td>
-                      <td><i class="fa fa-phone"></i> Available</td>
-                    </tr>
-                    <tr>
-                      <td>3</td>
-                      <td>Jones</td>
-                      <td><i class="fa fa-user-times"></i> Busy</td>
-                    </tr>
-                    <tr>
-                      <td>4</td>
-                      <td>James</td>
-                      <td><i class="fa fa-user-times"></i> Busy</td>
-                    </tr>
+
                   </tbody>
                 </table>
               </div>
@@ -260,161 +218,7 @@
           </div>
           <!-- east ends -->
 
-          <!-- south starts -->
-          <div class="card">
-            <div class="card-header bg-secondary" id="card2">
-              <h2 class="mb-0">
-                <button
-                  class="btn btn-link text-white"
-                  type="button"
-                  data-toggle="collapse"
-                  data-target="#cardbody2"
-                >
-                  South
-                </button>
-              </h2>
-            </div>
-            <div id="cardbody2" class="collapse" data-parent="#accordion1">
-              <div class="card-body">
-                <table class="table">
-                  <thead>
-                    <tr>
-                      <th>ID</th>
-                      <th>Name</th>
-                      <th>Status</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td>1</td>
-                      <td>Jones</td>
-                      <td><i class="fa fa-user-times"></i> Busy</td>
-                    </tr>
-                    <tr>
-                      <td>2</td>
-                      <td>Miller</td>
-                      <td><i class="fa fa-phone"></i> Available</td>
-                    </tr>
-                    <tr>
-                      <td>3</td>
-                      <td>Ford</td>
-                      <td><i class="fa fa-user-times"></i> Busy</td>
-                    </tr>
-                    <tr>
-                      <td>4</td>
-                      <td>James</td>
-                      <td><i class="fa fa-phone"></i> Available</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </div>
-          <!-- south ends -->
 
-          <!-- west starts -->
-          <div class="card">
-            <div class="card-header bg-secondary" id="card3">
-              <h2 class="mb-0">
-                <button
-                  class="btn btn-link text-white"
-                  type="button"
-                  data-toggle="collapse"
-                  data-target="#cardbody3"
-                >
-                  West
-                </button>
-              </h2>
-            </div>
-            <div id="cardbody3" class="collapse" data-parent="#accordion1">
-              <div class="card-body">
-                <table class="table">
-                  <thead>
-                    <tr>
-                      <th>ID</th>
-                      <th>Name</th>
-                      <th>Status</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td>1</td>
-                      <td>Jones</td>
-                      <td><i class="fa fa-user-times"></i> Busy</td>
-                    </tr>
-                    <tr>
-                      <td>2</td>
-                      <td>Miller</td>
-                      <td><i class="fa fa-phone"></i> Available</td>
-                    </tr>
-                    <tr>
-                      <td>3</td>
-                      <td>Ford</td>
-                      <td><i class="fa fa-user-times"></i> Busy</td>
-                    </tr>
-                    <tr>
-                      <td>4</td>
-                      <td>James</td>
-                      <td><i class="fa fa-phone"></i> Available</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </div>
-          <!-- west ends -->
-
-          <!-- north starts -->
-          <div class="card">
-            <div class="card-header bg-secondary" id="card4">
-              <h2 class="mb-0">
-                <button
-                  class="btn btn-link text-white"
-                  type="button"
-                  data-toggle="collapse"
-                  data-target="#cardbody4"
-                >
-                  North
-                </button>
-              </h2>
-            </div>
-            <div id="cardbody4" class="collapse" data-parent="#accordion1">
-              <div class="card-body">
-                <table class="table">
-                  <thead>
-                    <tr>
-                      <th>ID</th>
-                      <th>Name</th>
-                      <th>Status</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td>1</td>
-                      <td>Jones</td>
-                      <td><i class="fa fa-user-times"></i> Busy</td>
-                    </tr>
-                    <tr>
-                      <td>2</td>
-                      <td>Miller</td>
-                      <td><i class="fa fa-phone"></i> Available</td>
-                    </tr>
-                    <tr>
-                      <td>3</td>
-                      <td>Ford</td>
-                      <td><i class="fa fa-user-times"></i> Busy</td>
-                    </tr>
-                    <tr>
-                      <td>4</td>
-                      <td>James</td>
-                      <td><i class="fa fa-phone"></i> Available</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </div>
-          <!-- north ends -->
         </div>
       </div>
     </div>
