--- a/TaskManager/src/app/dashboard/dashboard.component.html
+++ b/TaskManager/src/app/dashboard/dashboard.component.html
@@ -102,7 +102,7 @@
                 Project A
               </button>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="#" *ngFor="let project of Projects">{{project}}</a>
+                <a class="dropdown-item" href="#" *ngFor="let project of Projects" onclick="return false" (click)="onProjectChange($event)">{{project}}</a>
               </div>
             </div>
           </div>
