--- a/TaskManager/src/app/dashboard/dashboard.component.html
+++ b/TaskManager/src/app/dashboard/dashboard.component.html
@@ -194,7 +194,7 @@
                 </button>
               </h2>
             </div>
-            <div [id]="'cardbody' + i" class="collapse" data-parent="#accordion1">
+            <div [id]="'cardbody' + i" class="collapse" data-parent="#accordion1" [ngClass]="(i ==0) ? 'show': '' ">
               <div class="card-body">
                 <table class="table">
                   <thead>
@@ -207,7 +207,7 @@
                   <tbody>
                     <tr *ngFor="let member of teamMembersGrp.Members">
                       <td>{{member.ID}}</td>
-                      <td>{{member.Name}}</td>
+                      <td [style.color]="(member.Status == 'Busy' ? 'red':'black')">{{member.Name}}</td>
                       <td><i class="fa fa-phone"></i>{{member.Status}}</td>
                     </tr>
 
