--- a/TaskManager/src/app/dashboard/dashboard.component.html
+++ b/TaskManager/src/app/dashboard/dashboard.component.html
@@ -182,39 +182,42 @@
         <div class="accordion" id="accordion1">
           <!-- east starts -->
           <div class="card" *ngFor="let teamMembersGrp of TeamMembers;let i=index">
-            <div class="card-header bg-secondary" id="card1">
-              <h2 class="mb-0">
-                <button
-                  class="btn btn-link text-white"
-                  type="button"
-                  data-toggle="collapse"
-                  [attr.data-target]="'#cardbody' + i"
-                >
-                  {{teamMembersGrp.Region}}
-                </button>
-              </h2>
-            </div>
-            <div [id]="'cardbody' + i" class="collapse" data-parent="#accordion1" [ngClass]="(i ==0) ? 'show': '' ">
-              <div class="card-body">
-                <table class="table">
-                  <thead>
-                    <tr>
-                      <th>ID</th>
-                      <th>Name</th>
-                      <th>Status</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr *ngFor="let member of teamMembersGrp.Members">
-                      <td>{{member.ID}}</td>
-                      <td [style.color]="(member.Status == 'Busy' ? 'red':'black')">{{member.Name}}</td>
-                      <td><i class="fa fa-phone"></i>{{member.Status}}</td>
-                    </tr>
+            <div *ngIf="i!=0">
+              <div class="card-header bg-secondary" id="card1">
+                <h2 class="mb-0">
+                  <button
+                    class="btn btn-link text-white"
+                    type="button"
+                    data-toggle="collapse"
+                    [attr.data-target]="'#cardbody' + i"
+                  >
+                    {{teamMembersGrp.Region}}
+                  </button>
+                </h2>
+              </div>
+              <div [id]="'cardbody' + i" class="collapse" data-parent="#accordion1" [ngClass]="(i ==0) ? 'show': '' ">
+                <div class="card-body">
+                  <table class="table">
+                    <thead>
+                      <tr>
+                        <th>ID</th>
+                        <th>Name</th>
+                        <th>Status</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr *ngFor="let member of teamMembersGrp.Members">
+                        <td>{{member.ID}}</td>
+                        <td [style.color]="(member.Status == 'Busy' ? 'red':'black')">{{member.Name}}</td>
+                        <td><i class="fa fa-phone"></i>{{member.Status}}</td>
+                      </tr>
 
-                  </tbody>
-                </table>
+                    </tbody>
+                  </table>
+                </div>
               </div>
             </div>
+
           </div>
           <!-- east ends -->
 
