--- a/TaskManager/src/app/dashboard/dashboard.component.html
+++ b/TaskManager/src/app/dashboard/dashboard.component.html
@@ -182,7 +182,7 @@
         <div class="accordion" id="accordion1">
           <!-- east starts -->
           <div class="card" *ngFor="let teamMembersGrp of TeamMembers;let i=index">
-            <div *ngIf="i!=0">
+
               <div class="card-header bg-secondary" id="card1">
                 <h2 class="mb-0">
                   <button
@@ -197,26 +197,38 @@
               </div>
               <div [id]="'cardbody' + i" class="collapse" data-parent="#accordion1" [ngClass]="(i ==0) ? 'show': '' ">
                 <div class="card-body">
-                  <table class="table">
-                    <thead>
-                      <tr>
-                        <th>ID</th>
-                        <th>Name</th>
-                        <th>Status</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr *ngFor="let member of teamMembersGrp.Members">
-                        <td>{{member.ID}}</td>
-                        <td [style.color]="(member.Status == 'Busy' ? 'red':'black')">{{member.Name}}</td>
-                        <td><i class="fa fa-phone"></i>{{member.Status}}</td>
-                      </tr>
+                  <div *ngIf="i == 0;then firstTemplate;else secondTemplate">
 
-                    </tbody>
-                  </table>
+                  </div>
+                  <ng-template #firstTemplate>
+                    <div class="card" *ngFor="let teammember of teamMembersGrp.Members">
+                     <div class="card-header bg-primary text-white">#{{teammember.ID}} {{teammember.Name}}</div>
+                     <div class="card-body">{{teammember.Status}}</div>
+                    </div>
+                  </ng-template>
+                  <ng-template #secondTemplate>
+                    <table class="table">
+                      <thead>
+                        <tr>
+                          <th>ID</th>
+                          <th>Name</th>
+                          <th>Status</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr *ngFor="let member of teamMembersGrp.Members">
+                          <td>{{member.ID}}</td>
+                          <td [style.color]="(member.Status == 'Busy' ? 'red':'black')">{{member.Name}}</td>
+                          <td><i class="fa fa-phone"></i>{{member.Status}}</td>
+                        </tr>
+
+                      </tbody>
+                    </table>
+                  </ng-template>
+
                 </div>
               </div>
-            </div>
+
 
           </div>
           <!-- east ends -->
