--- a/TaskManager/src/app/admin/projects/projects.component.html
+++ b/TaskManager/src/app/admin/projects/projects.component.html
@@ -50,7 +50,7 @@
                 Edit
               </button>
               <button
-              class="btn btn-info"
+              class="btn btn-warning"
               (click)="onDeleteClick($event, i)"
               data-toggle="modal"
               data-target="#deleteModal"
