--- a/TaskManager/src/app/admin/projects/projects.component.html
+++ b/TaskManager/src/app/admin/projects/projects.component.html
@@ -77,11 +77,13 @@
           <div class="form-group row">
             <label for="txtNewProjectID" class="col-sm-4 col-form-label">Project ID</label>
             <div class="col-sm-8">
-              <input type="text" id="txtNewProjectID" style="width:130px" class="form-control" placeholder="Project ID" name="ProjectID" [(ngModel)]="newProject.projectID" required="required" pattern="^[0-9]*$" #newProjectID="ngModel" [ngClass]="{ 'is-invalid': newProjectID.invalid && (newProjectID.dirty || newProjectID.touched || newForm.submitted), 'is-valid': newProjectID.valid && (newProjectID.dirty || newProjectID.touched || newForm.submitted) }">
+              <input type="text" id="txtNewProjectID" style="width:130px" class="form-control" placeholder="Project ID" name="ProjectID" [(ngModel)]="newProject.projectID" required="required" pattern="^[0-9]*$" appProjectIDUniqueValidator #newProjectID="ngModel" [ngClass]="{ 'is-invalid': newProjectID.invalid && (newProjectID.dirty || newProjectID.touched || newForm.submitted), 'is-valid': newProjectID.valid && (newProjectID.dirty || newProjectID.touched || newForm.submitted) }">
 
               <span class="text-danger" *ngIf="newProjectID.invalid && (newProjectID.dirty || newProjectID.touched || newForm.submitted) && newProjectID.errors!['required']">Project ID can't be blank</span>
 
               <span class="text-danger" *ngIf="newProjectID.invalid && (newProjectID.dirty || newProjectID.touched || newForm.submitted) && newProjectID.errors!['pattern']">Project ID should contain numbers only</span>
+
+              <span class="text-danger" *ngIf="newProjectID.invalid && (newProjectID.dirty || newProjectID.touched || newForm.submitted) && newProjectID.errors!['uniqueProjectID']">Duplicate Project ID</span>
 
             </div>
           </div>
@@ -112,9 +114,11 @@
           <div class="form-group row">
             <label for="txtTeamSize" class="col-sm-4 col-form-label">Team Size</label>
             <div class="col-sm-8">
-              <input type="text" id="txtTeamSize" style="width:150px" class="form-control" placeholder="Team Size" name="TeamSize" [(ngModel)]="newProject.teamSize" pattern="^[0-9]*$" maxlength="7" #newTeamSize="ngModel" [ngClass]="{ 'is-invalid': newTeamSize.invalid && (newTeamSize.dirty || newTeamSize.touched || newForm.submitted), 'is-valid': newTeamSize.valid && (newTeamSize.dirty || newTeamSize.touched || newForm.submitted) }">
+              <input type="text" id="txtTeamSize" style="width:150px" class="form-control" placeholder="Team Size" name="TeamSize" [(ngModel)]="newProject.teamSize" pattern="^[0-9]*$" maxlength="7" appTeamSizeValidator="5" #newTeamSize="ngModel" [ngClass]="{ 'is-invalid': newTeamSize.invalid && (newTeamSize.dirty || newTeamSize.touched || newForm.submitted), 'is-valid': newTeamSize.valid && (newTeamSize.dirty || newTeamSize.touched || newForm.submitted) }">
 
               <span class="text-danger" *ngIf="newTeamSize.invalid && (newTeamSize.dirty || newTeamSize.touched || newForm.submitted) && newTeamSize.errors!['required']">Team Size should be a number</span>
+
+              <span class="text-danger" *ngIf="newTeamSize.invalid && (newTeamSize.dirty || newTeamSize.touched || newForm.submitted) && newTeamSize.errors!['divisible']">Team Size should be divisble by 5</span>
             </div>
           </div>
 
@@ -184,11 +188,13 @@
           <div class="form-group row">
             <label for="txtEditProjectID" class="col-sm-4 col-form-label">Project ID</label>
             <div class="col-sm-8">
-              <input type="text" id="txtEditProjectID" style="width:130px" class="form-control-plain-text" placeholder="Project ID" name="ProjectID" [(ngModel)]="editProject.projectID" disabled="disabled" required="required" pattern="^[0-9]*$" #editProjectID="ngModel" [ngClass]="{ 'is-invalid': editProjectID.invalid && (editProjectID.dirty || editProjectID.touched || newForm.submitted), 'is-valid': editProjectID.valid && (editProjectID.dirty || editProjectID.touched || newForm.submitted) }">
+              <input type="text" id="txtEditProjectID" style="width:130px" class="form-control-plain-text" placeholder="Project ID" name="ProjectID" [(ngModel)]="editProject.projectID" disabled="disabled" required="required" pattern="^[0-9]*$" appProjectIDUniqueValidator #editProjectID="ngModel" [ngClass]="{ 'is-invalid': editProjectID.invalid && (editProjectID.dirty || editProjectID.touched || newForm.submitted), 'is-valid': editProjectID.valid && (editProjectID.dirty || editProjectID.touched || newForm.submitted) }">
 
               <span class="text-danger" *ngIf="editProjectID.invalid && (editProjectID.dirty || editProjectID.touched || editForm.submitted) && editProjectID.errors!['required']">Project ID can't be blank</span>
 
               <span class="text-danger" *ngIf="editProjectID.invalid && (editProjectID.dirty || editProjectID.touched || editForm.submitted) && editProjectID.errors!['pattern']">Project ID should contain numbers only</span>
+
+              <span class="text-danger" *ngIf="editProjectID.invalid && (editProjectID.dirty || editProjectID.touched || editForm.submitted) && editProjectID.errors!['uniqueProjectID']">Duplicate Project ID</span>
 
             </div>
           </div>
@@ -218,9 +224,11 @@
           <div class="form-group row">
             <label for="txtEditTeamSize" class="col-sm-4 col-form-label">Team Size</label>
             <div class="col-sm-8">
-              <input type="text" id="txtEditTeamSize" style="width:150px" class="form-control" placeholder="Team Size" name="TeamSize" [(ngModel)]="editProject.teamSize" pattern="^[0-9]*$" maxlength="7" #editTeamSize="ngModel" [ngClass]="{ 'is-invalid': editTeamSize.invalid && (editTeamSize.dirty || editTeamSize.touched || editForm.submitted), 'is-valid': editTeamSize.valid && (editTeamSize.dirty || editTeamSize.touched || editForm.submitted) }">
+              <input type="text" id="txtEditTeamSize" style="width:150px" class="form-control" placeholder="Team Size" name="TeamSize" [(ngModel)]="editProject.teamSize" pattern="^[0-9]*$" maxlength="7" appTeamSizeValidator="5" #editTeamSize="ngModel" [ngClass]="{ 'is-invalid': editTeamSize.invalid && (editTeamSize.dirty || editTeamSize.touched || editForm.submitted), 'is-valid': editTeamSize.valid && (editTeamSize.dirty || editTeamSize.touched || editForm.submitted) }">
 
               <span class="text-danger" *ngIf="editTeamSize.invalid && (editTeamSize.dirty || editTeamSize.touched || editForm.submitted) && editTeamSize.errors!['required']">Team Size should be a number</span>
+
+              <span class="text-danger" *ngIf="editTeamSize.invalid && (editTeamSize.dirty || editTeamSize.touched || editForm.submitted) && editTeamSize.errors!['divisible']">Team Size should be divisble by 5</span>
             </div>
           </div>
 
