--- a/TaskManager/src/app/sign-up/sign-up.component.html
+++ b/TaskManager/src/app/sign-up/sign-up.component.html
@@ -43,6 +43,19 @@
             </div>
           </div>
 
+          <div class="form-group form-row">
+            <label  class="col-md-4 col-form-label">Gender:</label>
+            <div class="col-md-8">
+              <div class="form-check-label form-check-inline">
+                 <input type="radio" name="gender" id="male" value="male" class="form-check-input" formControlName="gender">
+                 <label for="male" class="form-check-label">Male</label>
+              </div>
+              <div class="form-check-label form-check-inline">
+                <input type="radio" name="gender" id="female" value="female" class="form-check-input" formControlName="gender">
+                <label for="female" class="form-check-label">FeMale</label>
+             </div>
+            </div>
+          </div>
         </form>
 
         {{signUpForm.value | json}}
