Dynamic Radio buttons

--- a/TaskManager/src/app/sign-up/sign-up.component.html
+++ b/TaskManager/src/app/sign-up/sign-up.component.html
@@ -46,16 +46,14 @@
           <div class="form-group form-row">
             <label  class="col-md-4 col-form-label">Gender:</label>
             <div class="col-md-8">
-              <div class="form-check-label form-check-inline">
-                 <input type="radio" name="gender" id="male" value="male" class="form-check-input" formControlName="gender">
-                 <label for="male" class="form-check-label">Male</label>
+              <div class="form-check-label form-check-inline" *ngFor="let gender of genders">
+                 <input type="radio" name="gender" [id]="gender" [value]="gender" class="form-check-input" formControlName="gender">
+                 <label [for]="gender" class="form-check-label">{{gender}}</label>
               </div>
-              <div class="form-check-label form-check-inline">
-                <input type="radio" name="gender" id="female" value="female" class="form-check-input" formControlName="gender">
-                <label for="female" class="form-check-label">FeMale</label>
-             </div>
+
             </div>
           </div>
+
         </form>
 
         {{signUpForm.value | json}}
