--- a/TaskManager/src/app/sign-up/sign-up.component.html
+++ b/TaskManager/src/app/sign-up/sign-up.component.html
@@ -1,12 +1,13 @@
 <div class="row">
   <div class="col-md-8 col-xl-6 mx-auto">
+    <form [formGroup]="signUpForm" (ngSubmit)="onSubmitClick()">
+
     <div class="card mt-1">
       <div class="card-header">
         <h4>Sign Up</h4>
       </div>
 
       <div class="card-body">
-        <form [formGroup]="signUpForm">
 
           <div class="form-group form-row">
             <label for="firstName" class="col-md-4 col-form-label">First Name:</label>
@@ -71,12 +72,12 @@
               <label for="receiveNewsLetters" class="form-check-label">Receive News Letters</label>
             </div>
           </div>
-
-        </form>
-
         {{signUpForm.value | json}}
       </div>
-
+      <div class="card-footer">
+        <button class="btn btn-success float-right">Create Account</button>
+      </div>
     </div>
+  </form>
   </div>
 </div>
