--- a/TaskManager/src/app/sign-up/sign-up.component.html
+++ b/TaskManager/src/app/sign-up/sign-up.component.html
@@ -1,13 +1,14 @@
 <div class="row">
   <div class="col-md-8 col-xl-6 mx-auto">
+
     <form [formGroup]="signUpForm" (ngSubmit)="onSubmitClick()">
 
-    <div class="card mt-1">
-      <div class="card-header">
-        <h4>Sign Up</h4>
-      </div>
+      <div class="card mt-1">
+        <div class="card-header">
+          <h4>Sign Up</h4>
+        </div>
 
-      <div class="card-body">
+        <div class="card-body">
 
           <div class="form-group form-row" formGroupName="personName">
             <label for="firstName" class="col-md-4 col-form-label">First Name:</label>
@@ -45,24 +46,27 @@
           </div>
 
           <div class="form-group form-row">
-            <label  class="col-md-4 col-form-label">Gender:</label>
+            <label class="col-md-4 col-form-label">Gender:</label>
             <div class="col-md-8">
+
               <div class="form-check-label form-check-inline" *ngFor="let gender of genders">
-                 <input type="radio" name="gender" [id]="gender" [value]="gender" class="form-check-input" formControlName="gender">
-                 <label [for]="gender" class="form-check-label">{{gender}}</label>
+                <input type="radio" name="gender" [id]="gender" [value]="gender" class="form-check-input" formControlName="gender">
+                <label [for]="gender" class="form-check-label">{{gender}}</label>
               </div>
 
             </div>
           </div>
 
           <div class="form-group form-row">
-         <label for="countryID" class="col-md-4 col-form-label">Country</label>
-         <div class="col-md-8">
-         <select name="countryID" id="countryID" class="form-control" formControlName="countryID">
-          <option value="null">Please Select</option>
-          <option *ngFor="let country of countries" [value]="country.countryID">{{country.countryName}}</option>
-         </select>
-        </div>
+            <label for="countryID" class="col-md-4 col-form-label">Country:</label>
+            <div class="col-md-8">
+              <select name="countryID" id="countryID" class="form-control" formControlName="countryID">
+                <option value="null">Please Select</option>
+                <option *ngFor="let country of countries" [value]="country.countryID">
+                  {{country.countryName}}
+                </option>
+              </select>
+            </div>
           </div>
 
           <div class="form-group form-row">
@@ -72,12 +76,46 @@
               <label for="receiveNewsLetters" class="form-check-label">Receive News Letters</label>
             </div>
           </div>
-        {{signUpForm.value | json}}
+
+          <div class="form-group form-row">
+            <label class="col-md-4 col-form-label">Skills:</label>
+            <div class="col-md-8" formArrayName="skills">
+              <div class="row" *ngFor="let skill of signUpForm.get('skills').controls; let i = index" [formGroupName]="i">
+
+                <div class="col-5">
+                  <input type="text" name="skillName" id="skillName" placeholder="Skill Name" formControlName="skillName" class="form-control">
+                </div>
+
+                <div class="col-4">
+                  <select name="level" id="level" formControlName="level" class="form-control">
+                    <option value="null">Please Select</option>
+                    <option value="Beginner">Beginner</option>
+                    <option value="Intermediate">Intermediate</option>
+                    <option value="Professional">Professional</option>
+                    <option value="Expert">Expert</option>
+                  </select>
+                </div>
+
+                <div class="col-3">
+                  <button class="btn btn-danger" type="button" (click)="onRemoveClick(i)">Remove</button>
+                </div>
+              </div>
+
+              <button class="btn btn-primary" type="button" (click)="onAddSkill()">Add Skill</button>
+            </div>
+
+
+          </div>
+
+          {{signUpForm.value | json}}
+        </div>
+
+        <div class="card-footer">
+          <button class="btn btn-success float-right">Create Account</button>
+        </div>
+
       </div>
-      <div class="card-footer">
-        <button class="btn btn-success float-right">Create Account</button>
-      </div>
-    </div>
-  </form>
+
+    </form>
   </div>
 </div>
