Validation erros correction

--- a/TaskManager/src/app/sign-up/sign-up.component.html
+++ b/TaskManager/src/app/sign-up/sign-up.component.html
@@ -23,7 +23,7 @@
           <div class="form-group form-row" formGroupName="personName">
             <label for="lastName" class="col-md-4 col-form-label">Last Name:</label>
             <div class="col-md-8">
-              <input type="text" name="lastName" id="lastName" placeholder="Last Name" class="form-control" formControlName="lastName"  [ngClass]="{
+              <input type="text" name="lastName" id="lastName" placeholder="Last Name" class="form-control" formControlName="lastName" [ngClass]="{
                 'is-invalid': signUpForm.get('personName.lastName').invalid && (signUpForm.get('personName.lastName').dirty || signUpForm.get('personName.lastName').touched || signUpForm.submitted),
 
                 'is-valid': signUpForm.get('personName.lastName').valid && (signUpForm.get('personName.lastName').dirty || signUpForm.get('personName.lastName').touched || signUpForm.submitted) }">
@@ -33,7 +33,7 @@
           <div class="form-group form-row">
             <label for="email" class="col-md-4 col-form-label">Email:</label>
             <div class="col-md-8">
-              <input type="text" name="email" id="email" placeholder="Email" class="form-control" formControlName="email"  [ngClass]="{
+              <input type="text" name="email" id="email" placeholder="Email" class="form-control" formControlName="email" [ngClass]="{
                 'is-invalid': signUpForm.get('email').invalid && (signUpForm.get('email').dirty || signUpForm.get('email').touched || signUpForm.submitted),
 
                 'is-valid': signUpForm.get('email').valid && (signUpForm.get('email').dirty || signUpForm.get('email').touched || signUpForm.submitted) }">
@@ -43,7 +43,7 @@
           <div class="form-group form-row">
             <label for="mobile" class="col-md-4 col-form-label">Mobile:</label>
             <div class="col-md-8">
-              <input type="text" name="mobile" id="mobile" placeholder="Mobile" class="form-control" formControlName="mobile"  [ngClass]="{
+              <input type="text" name="mobile" id="mobile" placeholder="Mobile" class="form-control" formControlName="mobile" [ngClass]="{
                 'is-invalid': signUpForm.get('mobile').invalid && (signUpForm.get('mobile').dirty || signUpForm.get('mobile').touched || signUpForm.submitted),
 
                 'is-valid': signUpForm.get('mobile').valid && (signUpForm.get('mobile').dirty || signUpForm.get('mobile').touched || signUpForm.submitted) }">
@@ -53,7 +53,7 @@
           <div class="form-group form-row">
             <label for="dateOfBirth" class="col-md-4 col-form-label">Date of Birth:</label>
             <div class="col-md-8">
-              <input type="date" name="dateOfBirth" id="dateOfBirth" placeholder="Date of Birth" class="form-control" formControlName="dateOfBirth"  [ngClass]="{
+              <input type="date" name="dateOfBirth" id="dateOfBirth" placeholder="Date of Birth" class="form-control" formControlName="dateOfBirth" [ngClass]="{
                 'is-invalid': signUpForm.get('dateOfBirth').invalid && (signUpForm.get('dateOfBirth').dirty || signUpForm.get('dateOfBirth').touched || signUpForm.submitted),
 
                 'is-valid': signUpForm.get('dateOfBirth').valid && (signUpForm.get('dateOfBirth').dirty || signUpForm.get('dateOfBirth').touched || signUpForm.submitted) }">
@@ -75,7 +75,7 @@
           <div class="form-group form-row">
             <label for="countryID" class="col-md-4 col-form-label">Country:</label>
             <div class="col-md-8">
-              <select name="countryID" id="countryID" class="form-control" formControlName="countryID"  [ngClass]="{
+              <select name="countryID" id="countryID" class="form-control" formControlName="countryID" [ngClass]="{
                 'is-invalid': signUpForm.get('countryID').invalid && (signUpForm.get('countryID').dirty || signUpForm.get('countryID').touched || signUpForm.submitted),
 
                 'is-valid': signUpForm.get('countryID').valid && (signUpForm.get('countryID').dirty || signUpForm.get('countryID').touched || signUpForm.submitted) }">
@@ -102,16 +102,16 @@
 
                 <div class="col-5">
                   <input type="text" name="skillName" id="skillName" placeholder="Skill Name" formControlName="skillName" class="form-control" [ngClass]="{
-                    'is-invalid': signUpForm.get('skillName').invalid && (signUpForm.get('skillName').dirty || signUpForm.get('skillName').touched || signUpForm.submitted),
+                    'is-invalid': skill.get('skillName').invalid && (skill.get('skillName').dirty || skill.get('skillName').touched || signUpForm.submitted),
 
-                    'is-valid': signUpForm.get('skillName').valid && (signUpForm.get('skillName').dirty || signUpForm.get('skillName').touched || signUpForm.submitted) }">
+                    'is-valid': skill.get('skillName').valid && (skill.get('skillName').dirty || skill.get('skillName').touched || signUpForm.submitted) }">
                 </div>
 
                 <div class="col-4">
-                  <select name="level" id="level" formControlName="level" class="form-control"  [ngClass]="{
-                    'is-invalid': signUpForm.get('level').invalid && (signUpForm.get('level').dirty || signUpForm.get('level').touched || signUpForm.submitted),
+                  <select name="level" id="level" formControlName="level" class="form-control" [ngClass]="{
+                    'is-invalid': skill.get('level').invalid && (skill.get('level').dirty || skill.get('level').touched || signUpForm.submitted),
 
-                    'is-valid': signUpForm.get('level').valid && (signUpForm.get('level').dirty || signUpForm.get('level').touched || signUpForm.submitted) }">
+                    'is-valid': skill.get('level').valid && (skill.get('level').dirty || skill.get('level').touched || signUpForm.submitted) }">
                     <option value="null">Please Select</option>
                     <option value="Beginner">Beginner</option>
                     <option value="Intermediate">Intermediate</option>
