Add Validation Error Messages

--- a/TaskManager/src/app/sign-up/sign-up.component.html
+++ b/TaskManager/src/app/sign-up/sign-up.component.html
@@ -17,6 +17,10 @@
                 'is-invalid': signUpForm.get('personName.firstName').invalid && (signUpForm.get('personName.firstName').dirty || signUpForm.get('personName.firstName').touched || signUpForm.submitted),
 
                 'is-valid': signUpForm.get('personName.firstName').valid && (signUpForm.get('personName.firstName').dirty || signUpForm.get('personName.firstName').touched || signUpForm.submitted) }">
+
+              <span class="text-danger" *ngIf="signUpForm.get('personName.firstName').invalid && (signUpForm.get('personName.firstName').dirty || signUpForm.get('personName.firstName').touched || signUpForm.submitted) && signUpForm.get('personName.firstName').errors?.required">First name can't be blank</span>
+
+              <span class="text-danger" *ngIf="signUpForm.get('personName.firstName').invalid && (signUpForm.get('personName.firstName').dirty || signUpForm.get('personName.firstName').touched || signUpForm.submitted) && signUpForm.get('personName.firstName').errors?.minlength">First name should contain at least 2 characters</span>
             </div>
           </div>
 
@@ -27,6 +31,10 @@
                 'is-invalid': signUpForm.get('personName.lastName').invalid && (signUpForm.get('personName.lastName').dirty || signUpForm.get('personName.lastName').touched || signUpForm.submitted),
 
                 'is-valid': signUpForm.get('personName.lastName').valid && (signUpForm.get('personName.lastName').dirty || signUpForm.get('personName.lastName').touched || signUpForm.submitted) }">
+
+              <span class="text-danger" *ngIf="signUpForm.get('personName.lastName').invalid && (signUpForm.get('personName.lastName').dirty || signUpForm.get('personName.lastName').touched || signUpForm.submitted) && signUpForm.get('personName.lastName').errors?.required">Last name can't be blank</span>
+
+              <span class="text-danger" *ngIf="signUpForm.get('personName.lastName').invalid && (signUpForm.get('personName.lastName').dirty || signUpForm.get('personName.lastName').touched || signUpForm.submitted) && signUpForm.get('personName.lastName').errors?.minlength">Last name should contain at least 2 characters</span>
             </div>
           </div>
 
@@ -37,6 +45,10 @@
                 'is-invalid': signUpForm.get('email').invalid && (signUpForm.get('email').dirty || signUpForm.get('email').touched || signUpForm.submitted),
 
                 'is-valid': signUpForm.get('email').valid && (signUpForm.get('email').dirty || signUpForm.get('email').touched || signUpForm.submitted) }">
+
+              <span class="text-danger" *ngIf="signUpForm.get('email').invalid && (signUpForm.get('email').dirty || signUpForm.get('email').touched || signUpForm.submitted) && signUpForm.get('email').errors?.required">Email can't be blank</span>
+
+              <span class="text-danger" *ngIf="signUpForm.get('email').invalid && (signUpForm.get('email').dirty || signUpForm.get('email').touched || signUpForm.submitted) && signUpForm.get('email').errors?.email">Email is invalid</span>
             </div>
           </div>
 
@@ -47,6 +59,10 @@
                 'is-invalid': signUpForm.get('mobile').invalid && (signUpForm.get('mobile').dirty || signUpForm.get('mobile').touched || signUpForm.submitted),
 
                 'is-valid': signUpForm.get('mobile').valid && (signUpForm.get('mobile').dirty || signUpForm.get('mobile').touched || signUpForm.submitted) }">
+
+              <span class="text-danger" *ngIf="signUpForm.get('mobile').invalid && (signUpForm.get('mobile').dirty || signUpForm.get('mobile').touched || signUpForm.submitted) && signUpForm.get('mobile').errors?.required">Mobile can't be blank</span>
+
+              <span class="text-danger" *ngIf="signUpForm.get('mobile').invalid && (signUpForm.get('mobile').dirty || signUpForm.get('mobile').touched || signUpForm.submitted) && signUpForm.get('mobile').errors?.pattern">Mobile is invalid</span>
             </div>
           </div>
 
@@ -57,6 +73,8 @@
                 'is-invalid': signUpForm.get('dateOfBirth').invalid && (signUpForm.get('dateOfBirth').dirty || signUpForm.get('dateOfBirth').touched || signUpForm.submitted),
 
                 'is-valid': signUpForm.get('dateOfBirth').valid && (signUpForm.get('dateOfBirth').dirty || signUpForm.get('dateOfBirth').touched || signUpForm.submitted) }">
+
+              <span class="text-danger" *ngIf="signUpForm.get('dateOfBirth').invalid && (signUpForm.get('dateOfBirth').dirty || signUpForm.get('dateOfBirth').touched || signUpForm.submitted) && signUpForm.get('dateOfBirth').errors?.required">Date of Birth can't be blank</span>
             </div>
           </div>
 
@@ -68,6 +86,8 @@
                 <input type="radio" name="gender" [id]="gender" [value]="gender" class="form-check-input" formControlName="gender">
                 <label [for]="gender" class="form-check-label">{{gender}}</label>
               </div>
+
+              <span class="text-danger" *ngIf="signUpForm.get('gender').invalid && (signUpForm.get('gender').dirty || signUpForm.get('gender').touched || signUpForm.submitted) && signUpForm.get('gender').errors?.required">Please select gender</span>
 
             </div>
           </div>
@@ -84,6 +104,8 @@
                   {{country.countryName}}
                 </option>
               </select>
+
+              <span class="text-danger" *ngIf="signUpForm.get('countryID').invalid && (signUpForm.get('countryID').dirty || signUpForm.get('countryID').touched || signUpForm.submitted) && signUpForm.get('countryID').errors?.required">Please select country</span>
             </div>
           </div>
 
